--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_swiper_plus: any
   animated_text_kit: any
   spring: ^2.0.2
+  unsplash_client: ^2.1.0+3
   container_gradient_border: ^0.0.2
   simple_animations: any
   loading_indicator: ^3.1.0
