--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: any
+  cloudinary_sdk: ^4.0.2+10
   shimmer: any
   http: any
   shared_preferences: any
